[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/L3_forest/bridge/bridge_big_wall_side-min.png" type="Texture" id=1]
[ext_resource path="res://sprites/L3_forest/bridge/bridge_door-min.png" type="Texture" id=2]
[ext_resource path="res://sprites/L3_forest/bridge/bridge_tile-min.png" type="Texture" id=3]
[ext_resource path="res://Levels/2.0 - Forest/bridge_railing.tscn" type="PackedScene" id=4]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/L3_forest/bridge/bridge_big_wall_front-min.png" type="Texture" id=6]
[ext_resource path="res://Levels/2.0 - Forest/BridgeSnowyPine.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/2.0 - Forest/SnowyDeciduous.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/2.0 - Forest/bridge.gd" type="Script" id=9]
[ext_resource path="res://sprites/L3_forest/bridge/bridge_big_arch-min.png" type="Texture" id=10]
[ext_resource path="res://Levels/2.0 - Forest/Candelabra_side.tscn" type="PackedScene" id=11]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/L3_forest/lamp_glow.png" type="Texture" id=13]
[ext_resource path="res://sprites/L3_forest/vignette_fade.png" type="Texture" id=14]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=15]
[ext_resource path="res://BG.tscn" type="PackedScene" id=16]
[ext_resource path="res://sprites/L3_forest/bridge/bridge_window-min.png" type="Texture" id=17]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=18]

[sub_resource type="Animation" id=1]
resource_name = "misting"
length = 24.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("mist3:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8.3, 16.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.337255 ), Color( 1, 1, 1, 0.67451 ), Color( 1, 1, 1, 0.337255 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mist2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 13.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.337255 ), Color( 1, 1, 1, 0.14902 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mist:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 20.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.337255 ), Color( 1, 1, 1, 0.572549 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("mist4:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4.9, 8.8, 16 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.337255 ), Color( 1, 1, 1, 0.596078 ), Color( 1, 1, 1, 0.337255 ), Color( 1, 1, 1, 0.54902 ) ]
}

[sub_resource type="Curve" id=2]
min_value = -80.0
max_value = 80.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.158824, 33.0757 ), -82.4045, -82.4045, 0, 0, Vector2( 0.205882, -38.2757 ), 2058.38, 2058.38, 0, 0, Vector2( 0.335294, -33.9513 ), 0.0, 0.0, 0, 0, Vector2( 0.485294, 33.0757 ), -1639.92, -1639.92, 0, 0, Vector2( 0.752941, -35.3928 ), 0.0, 0.0, 0, 0, Vector2( 0.797059, 40.2829 ), 0.0, 0.0, 0, 0, Vector2( 0.873529, -48.3658 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 105.925, 49.1887 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 102.439, 37.0089 )

[node name="bridge" type="Node2D"]
script = ExtResource( 9 )
__meta__ = {
"_edit_vertical_guides_": [ -913.058 ]
}

[node name="rightSP" parent="." instance=ExtResource( 18 )]
position = Vector2( 1241.4, -477.427 )

[node name="leftSP" parent="." instance=ExtResource( 18 )]
position = Vector2( -285.799, -482.78 )

[node name="BG" parent="." instance=ExtResource( 16 )]
margin_left = -1432.21
margin_top = -1693.36
margin_right = 2316.79
margin_bottom = 1290.64

[node name="outdoors" type="Node2D" parent="."]
position = Vector2( -1432.21, -1693.36 )

[node name="mist" type="Node2D" parent="outdoors"]
position = Vector2( -40.8582, 646.52 )

[node name="sky" type="ColorRect" parent="outdoors/mist"]
margin_left = 662.0
margin_top = -506.0
margin_right = 3300.0
margin_bottom = 1668.0
color = Color( 0.760784, 0.717647, 0.717647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="trees" type="Node2D" parent="outdoors/mist"]
position = Vector2( 1432.21, 1693.36 )
scale = Vector2( 0.789658, 0.789658 )

[node name="mistanimator" type="AnimationPlayer" parent="outdoors/mist/trees"]
autoplay = "misting"
anims/misting = SubResource( 1 )

[node name="mist3" type="ColorRect" parent="outdoors/mist/trees"]
margin_left = -1189.07
margin_top = -2864.94
margin_right = 2804.93
margin_bottom = -113.938
color = Color( 1, 1, 1, 0.536762 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BridgeSnowyPine11" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( 286.491, -411.949 )
scale = Vector2( 1.26637, 1.26637 )

[node name="SnowyDeciduous5" parent="outdoors/mist/trees" instance=ExtResource( 8 )]
position = Vector2( 695.282, -741.85 )
scale = Vector2( 1.26637, 1.26637 )

[node name="SnowyDeciduous6" parent="outdoors/mist/trees" instance=ExtResource( 8 )]
position = Vector2( 1388.55, -732.288 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine12" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( 948.685, -469.323 )
scale = Vector2( 1.26637, 1.26637 )

[node name="mist2" type="ColorRect" parent="outdoors/mist/trees"]
margin_left = -1357.49
margin_top = -2880.64
margin_right = 2994.51
margin_bottom = -45.6428
color = Color( 1, 1, 1, 0.270282 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SnowyDeciduous2" parent="outdoors/mist/trees" instance=ExtResource( 8 )]
position = Vector2( 13.9639, -717.944 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( -203.58, -423.902 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine2" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( -203.58, -423.902 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine4" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( 520.769, -464.542 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine6" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( 1187.74, -478.885 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine7" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( 1534.38, -347.403 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine3" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( 138.275, -321.106 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine5" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( 810.031, -361.746 )
scale = Vector2( 1.26637, 1.26637 )

[node name="mist" type="ColorRect" parent="outdoors/mist/trees"]
margin_left = -1139.0
margin_top = -2848.0
margin_right = 2805.0
margin_bottom = -223.0
color = Color( 1, 1, 1, 0.393337 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="arcade_back" type="Node2D" parent="outdoors/mist/trees"]
position = Vector2( 191.042, -1007.72 )
scale = Vector2( 1.26637, 1.26637 )

[node name="bridge_big_arch-min" type="Sprite" parent="outdoors/mist/trees/arcade_back"]
position = Vector2( -333.643, -88.3574 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min2" type="Sprite" parent="outdoors/mist/trees/arcade_back"]
position = Vector2( -101.712, -89.3573 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min3" type="Sprite" parent="outdoors/mist/trees/arcade_back"]
position = Vector2( 129.512, -90.7715 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min4" type="Sprite" parent="outdoors/mist/trees/arcade_back"]
position = Vector2( 357.908, -90.7715 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min5" type="Sprite" parent="outdoors/mist/trees/arcade_back"]
position = Vector2( 585.596, -90.7715 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min6" type="Sprite" parent="outdoors/mist/trees/arcade_back"]
position = Vector2( 811.87, -90.7715 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min7" type="Sprite" parent="outdoors/mist/trees/arcade_back"]
position = Vector2( 1038.85, -90.7715 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min8" type="Sprite" parent="outdoors/mist/trees/arcade_back"]
position = Vector2( 1265.83, -90.7715 )
texture = ExtResource( 10 )

[node name="SnowyDeciduous3" parent="outdoors/mist/trees" instance=ExtResource( 8 )]
position = Vector2( 343.865, -576.899 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine8" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( 568.581, -364.137 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine9" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( 1049.09, -354.575 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine10" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( -48.1913, -409.558 )
scale = Vector2( 1.26637, 1.26637 )

[node name="SnowyDeciduous4" parent="outdoors/mist/trees" instance=ExtResource( 8 )]
position = Vector2( 1429.19, -545.822 )
scale = Vector2( 1.26637, 1.26637 )

[node name="vignette_fade" type="Sprite" parent="outdoors/mist/trees"]
position = Vector2( 694.424, -2079.36 )
rotation = 1.5708
scale = Vector2( 0.417085, 1.2568 )
texture = ExtResource( 14 )

[node name="mist4" type="ColorRect" parent="outdoors/mist/trees"]
margin_left = -1347.19
margin_top = -3009.35
margin_right = 3026.81
margin_bottom = 5.65234
color = Color( 1, 1, 1, 0.595417 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BridgeSnowyPine13" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( 1106.53, -397.654 )
scale = Vector2( 1.26637, 1.26637 )

[node name="SnowyDeciduous7" parent="outdoors/mist/trees" instance=ExtResource( 8 )]
position = Vector2( 628.265, -611.357 )
scale = Vector2( 1.26637, 1.26637 )

[node name="bridge_big_wall_side-min2" type="Sprite" parent="outdoors/mist/trees"]
position = Vector2( -502.062, -720.072 )
scale = Vector2( 1.26637, 1.26637 )
texture = ExtResource( 1 )

[node name="cpusnow2" type="CPUParticles2D" parent="outdoors/mist/trees"]
position = Vector2( 582.055, -2252.91 )
scale = Vector2( 1.26637, 1.26637 )
amount = 1000
lifetime = 10.0
preprocess = 7.0
emission_shape = 2
emission_rect_extents = Vector2( 1000, 1 )
gravity = Vector2( 0, 30 )
tangential_accel_curve = SubResource( 2 )
scale_amount = 4.0
scale_amount_random = 0.75

[node name="TextureRect2" type="TextureRect" parent="outdoors/mist/trees"]
margin_left = -551.0
margin_top = -1513.0
margin_right = 1867.0
margin_bottom = -1333.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arcade_front" type="Node2D" parent="outdoors/mist/trees"]
position = Vector2( 60.6962, -858.315 )
rotation = 0.00765606
scale = Vector2( 1.26637, 1.26637 )

[node name="bridge_big_arch-min" type="Sprite" parent="outdoors/mist/trees/arcade_front"]
position = Vector2( -333.643, -88.3574 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min2" type="Sprite" parent="outdoors/mist/trees/arcade_front"]
position = Vector2( -101.712, -89.3573 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min3" type="Sprite" parent="outdoors/mist/trees/arcade_front"]
position = Vector2( 129.512, -90.7715 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min4" type="Sprite" parent="outdoors/mist/trees/arcade_front"]
position = Vector2( 357.908, -90.7715 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min5" type="Sprite" parent="outdoors/mist/trees/arcade_front"]
position = Vector2( 585.596, -90.7715 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min6" type="Sprite" parent="outdoors/mist/trees/arcade_front"]
position = Vector2( 811.87, -90.7715 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min7" type="Sprite" parent="outdoors/mist/trees/arcade_front"]
position = Vector2( 1038.85, -90.7715 )
texture = ExtResource( 10 )

[node name="bridge_big_arch-min8" type="Sprite" parent="outdoors/mist/trees/arcade_front"]
position = Vector2( 1265.83, -90.7715 )
texture = ExtResource( 10 )

[node name="SnowyDeciduous8" parent="outdoors/mist/trees" instance=ExtResource( 8 )]
position = Vector2( -132.148, -570.742 )
scale = Vector2( 1.26637, 1.26637 )

[node name="SnowyDeciduous9" parent="outdoors/mist/trees" instance=ExtResource( 8 )]
position = Vector2( 1307.45, -482.742 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BridgeSnowyPine14" parent="outdoors/mist/trees" instance=ExtResource( 7 )]
position = Vector2( 72.0523, -348.387 )
scale = Vector2( 1.26637, 1.26637 )

[node name="BG2" type="Node2D" parent="."]

[node name="bridge_big_wall_side-min" type="Sprite" parent="BG2"]
position = Vector2( -433.789, -1230.58 )
texture = ExtResource( 1 )

[node name="bridge_door-min" type="Sprite" parent="BG2"]
position = Vector2( -379.78, -652.388 )
texture = ExtResource( 2 )

[node name="Candelabra_side" parent="BG2" instance=ExtResource( 11 )]
position = Vector2( -468.189, -657.711 )

[node name="Candelabra_side2" parent="BG2" instance=ExtResource( 11 )]
position = Vector2( -321.111, -797.718 )

[node name="BridgeSnowyPine" parent="BG2" instance=ExtResource( 7 )]
position = Vector2( -372.275, 333.078 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 215.862, -525.379 )
camera = NodePath("../../PuppyCamera")

[node name="ysortbg" type="YSort" parent="YSort"]
position = Vector2( -307.703, 105.714 )

[node name="railings" type="YSort" parent="YSort/ysortbg"]

[node name="front_rails" type="YSort" parent="YSort/ysortbg/railings"]
position = Vector2( 3.84637, -169.756 )
scale = Vector2( 1, 0.7 )

[node name="bridge_railing2" parent="YSort/ysortbg/railings/front_rails" instance=ExtResource( 4 )]
position = Vector2( 113.271, -514.695 )

[node name="bridge_railing3" parent="YSort/ysortbg/railings/front_rails" instance=ExtResource( 4 )]
position = Vector2( 728.811, -512.807 )

[node name="bridge_railing6" parent="YSort/ysortbg/railings/front_rails" instance=ExtResource( 4 )]
position = Vector2( 1348.63, -512.807 )

[node name="back_rails" type="YSort" parent="YSort/ysortbg/railings"]
position = Vector2( -6.82843, -160.159 )
scale = Vector2( 1, 0.7 )

[node name="bridge_railing" parent="YSort/ysortbg/railings/back_rails" instance=ExtResource( 4 )]
position = Vector2( 290.371, -716.684 )

[node name="bridge_railing4" parent="YSort/ysortbg/railings/back_rails" instance=ExtResource( 4 )]
position = Vector2( 901.782, -716.684 )

[node name="bridge_railing5" parent="YSort/ysortbg/railings/back_rails" instance=ExtResource( 4 )]
position = Vector2( 1515.18, -716.684 )

[node name="PuppyCamera" parent="." instance=ExtResource( 15 )]
position = Vector2( 436.776, -516.806 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -541.198, -1061.75 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1364.77, 22.7673 )

[node name="FG" type="Node2D" parent="."]
position = Vector2( 4.24261, 0 )

[node name="bridge_big_wall_front-min" type="Sprite" parent="FG"]
position = Vector2( 1388.16, -528.265 )
texture = ExtResource( 6 )

[node name="BridgeSnowyPine2" parent="FG" instance=ExtResource( 7 )]
position = Vector2( 1319.44, 406.17 )

[node name="cpusnow" type="CPUParticles2D" parent="FG"]
position = Vector2( 77.665, -1823.66 )
scale = Vector2( 0.999999, 0.999999 )
amount = 5000
lifetime = 20.0
preprocess = 12.0
speed_scale = 1.5
randomness = 0.5
lifetime_randomness = 0.5
emission_shape = 2
emission_rect_extents = Vector2( 1500, 1 )
gravity = Vector2( 15, 50 )
tangential_accel_curve = SubResource( 2 )
scale_amount = 7.0
scale_amount_random = 0.75

[node name="bridge_window-min" type="Sprite" parent="FG"]
position = Vector2( -461.044, -922.5 )
texture = ExtResource( 17 )

[node name="lamp_glow" type="Sprite" parent="FG/bridge_window-min"]
modulate = Color( 1, 1, 1, 0.152941 )
position = Vector2( 1.21899, -14.8586 )
scale = Vector2( 1.42541, 1.63976 )
texture = ExtResource( 13 )

[node name="rightTZ" parent="." instance=ExtResource( 5 )]
position = Vector2( 1389.07, -451.505 )
rotation = -1.60263

[node name="CollisionShape2D" parent="rightTZ" index="0"]
position = Vector2( 2.94629, -11.7848 )
shape = SubResource( 3 )

[node name="leftTZ" parent="." instance=ExtResource( 5 )]
position = Vector2( -403.501, -517.96 )
rotation = 2.39977

[node name="CollisionShape2D" parent="leftTZ" index="0"]
position = Vector2( -5.32361, -9.50943 )
shape = SubResource( 4 )

[node name="Collisions" type="Node2D" parent="."]
visible = false

[node name="top" type="StaticBody2D" parent="Collisions"]
position = Vector2( 1.41422, 50.9117 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/top"]
position = Vector2( 171.286, -327.149 )
polygon = PoolVector2Array( -511.016, -244.673, -701.935, -242.551, -501.908, -828.063, 1367.21, -255.403, -471.618, -268.578 )

[node name="bottom" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/bottom"]
position = Vector2( -61.3516, 404.044 )
polygon = PoolVector2Array( 1544.96, -777.046, 1458, -1159.42, 1435.8, -805.577, -413.143, -808.122, -358.282, -848.587, -435.357, -845.758, -240.404, -1496.89, -694.763, -705.774, 488.351, -604.211 )

[connection signal="transition_triggered" from="rightTZ" to="." method="_on_rightTZ_transition_triggered"]
[connection signal="transition_triggered" from="leftTZ" to="." method="_on_leftTZ_transition_triggered"]

[editable path="PuppyCamera"]
[editable path="rightTZ"]
[editable path="leftTZ"]
